[gd_scene load_steps=6 format=2]

[ext_resource path="res://antidoor.png" type="Texture" id=1]
[ext_resource path="res://Levels/AntiDoor.gd" type="Script" id=2]
[ext_resource path="res://antidooroutline.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[node name="AntiDoor" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="outline" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="body_exited"]
